# tradematebot

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  commands.txt  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: deploy.yml  items-to-db.yml  prices.yml  search-items-to-db.yml  update-prices.yml
alembic/: env.py
alembic/versions/: 30746ac5ec04_initial.py  6535440fe9dc_remove_bool_indexes.py  96af73d624cf_clean_items_and_deals_models.py  b8d66b2b26f4_remove_password_field.py
bot/: commands.txt  constants.py  db.py  db_init.py  deals.py  jobs.py  logger.py  main.py  menu.py  messages.py  models.py  names.py  notifications.py  parsers.py  picture_generator.py  runner.py  settings.py  stats.py  tracking.py  utils.py
bot/db/: __init__.py  alembic.ini  command.py  data_helper.py  models.py
bot/db/migrations/: env.py
bot/db/migrations/versions/: 32b8169bad1a_25032025_230701.py  370ef3d0e699_06042024_232833.py  44402487a7d0_05042024_223256.py  d02ca4574ae0_15042023_161149.py  ddb1bdf37e97_06042024_182445.py  fdfc105760c1_16042023_215722.py
cs2-items-parser/: main.py
csgo-items-parser/: main.py  parser.py
mini-app/: main.py
mini-app/templates/: base.html  stats.html  tracking-data.html  tracking.html
mini_app/: main.py  tracking_history.py
mini_app/templates/: 404.html  base.html  index.html  item-deals.html  stats-data.html  stats.html  tracking-data.html  tracking-history-data.html  tracking-history.html  tracking.html
mini_app_api/: data_loader.py  dependencies.py  main.py  models.py
mini_app_api/routes/: portfolio.py  profile.py  search.py  stats.py
price-worker/: main.py  stickers  worker.py
price_worker/: main.py
resources/: agents.sql  containers.sql  skins.sql  stickers.sql  tools.sql
search-items-worker/: main.py
telegram-mini-app/: .gitignore  .prettierignore  .prettierrc.mjs  astro.config.mjs  package.json  pnpm-lock.yaml  wrangler.jsonc
telegram-mini-app/public/: robots.txt  sitemap.xml  telegram-web-app.js
telegram-mini-app/src/: utils.ts
telegram-mini-app/src/components/: MainContentSkeleton.astro  PortfolioItem.astro  PortfolioItemDrawer.astro  PortfolioItemDrawerSkeleton.astro  SearchItem.astro  StatsItem.astro  SummaryHeader.astro
telegram-mini-app/src/layouts/: AppLayout.astro
telegram-mini-app/src/pages/: add-deal.astro  history.astro  index.html  outside-telegram.astro  portfolio.astro  stats.astro
telegram-mini-app/src/pages/partials/: add-deal.astro  history.astro  portfolio.astro  search.astro  stats.astro
telegram-mini-app/src/pages/partials/portfolio-item/: [name].astro
telegram-mini-app/src/scripts/: mini-app-init.js
telegram-mini-app/src/styles/: add-deal.css  global.css  portfolio.css  search.css  stats.css
tests/: conftest.py  test_deals.py  test_weapon_text_parser.py
