[tool.poetry]
name = "tradematebot"
version = "0.1.0"
description = "Telegram Bot that helps to monitor and track CS2 investments"
authors = ["HellConnector <kavai.barbarian@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"

packages = [
    { include = "bot" },
    { include = "cs2-items-parser" },
    { include = "price-worker" },
    { include = "mini_app" },
]

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^21.0.1"
asyncpg = "^0.29.0"
apscheduler = "^3.10.1"
alembic = "^1.10.3"
python-dotenv = "^1.0.0"
sqlalchemy = {version = "^2.0.27", extras = ["asyncio"]}
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.262"
black = "^24.3.0"
memray = "^1.7.0"

[tool.poetry.group.parser.dependencies]
vdf = "^3.4"

[tool.poetry.group.mini-app.dependencies]
fastapi = "^0.110.0"
uvicorn = {version = "^0.28.0", extras = ["standard"]}
jinja2 = "^3.1.3"
python-multipart = "^0.0.9"

[tool.poetry.scripts]
bot = "bot.main:run"
mini-app = "mini_app.main:run"
price-worker = "price-worker.main:run"
items2db-worker = "cs2-items-parser.main:run"
alembic = "bot.db.command:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
python.analysis.useLibraryCodeForTypes = true
# TODO remove when all issuies will be fixed
reportOptionalMemberAccess = false
reportOptionalSubscript = false
reportGeneralTypeIssues = false

[tool.ruff]
target-version = "py311"
